--- a/capital.html
+++ b/capital.html
@@ -1,141 +1,178 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Altellect Capital</title>
+	<link rel="icon" type="image/png" href="assets/Logo.png" />
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
 
-<!-- HEADER (copied from index.html) -->
-<header class="header">
-	<div class="header-container">
-		<div class="logo-wrap">
-			<img src="assets/Logo.png" alt="Altellect" />
-		</div>
-		<nav class="nav">
-			<a href="index.html">Home</a>
-			<a href="about-us.html">About Us</a>
-			<a href="Projects.html">Projects</a>
-			<a class="active" href="capital.html">Altellect Capital</a>
-			<a href="carrers.html">Careers</a>
-			<a href="Apply-now.html">Join our team</a>
-			<a href="contact.html">Contact Us</a>
-		</nav>
-		<a class="join-btn" href="join.html">Join The Ecosystem</a>
-	</div>
-</header>
-
-<!-- HERO SECTION -->
-<section class="capital-hero" style="background:#ededed; padding:0;">
-	<img src="assets/capital-hero.jpg" alt="Investing in Enduring Masterpieces" style="width:100%; max-height:260px; object-fit:cover;">
-</section>
-
-<!-- MAIN CONTENT -->
-<main class="capital-main" style="background:#fff;">
-	<section style="text-align:center; padding:40px 0 0 0;">
-		<h2 style="font-family:Montserrat,Arial,sans-serif; font-size:2rem; font-weight:700; margin-bottom:10px;">Where Capital Meets Execution Intelligence</h2>
-		<p style="font-size:1.1rem; color:#222; max-width:700px; margin:0 auto 18px auto;">Altellect Capital is our strategic investment arm that fuels high-impact, high-return ventures designed for long-term perpetuity.</p>
-		<a href="#" class="join-btn" style="margin-top:10px;">Join the Ecosystem</a>
-	</section>
-
-	<!-- Capital Formats -->
-	<section style="background:#393939; color:#fff; margin:40px 0; padding:36px 0;">
-		<div class="container" style="max-width:1000px; margin:auto;">
-			<h3 style="font-size:1.4rem; font-family:Montserrat,Arial,sans-serif; font-weight:700; margin-bottom:24px;">Our Capital Formats</h3>
-			<div class="capital-formats-grid" style="display:grid; grid-template-columns:repeat(3,1fr); gap:24px;">
-				<div class="format-card" style="background:#323232; border-radius:8px; padding:24px;">
-					<div style="display:flex; align-items:center; margin-bottom:10px;"><span class="count" style="background:#FDB913; color:#fff; border-radius:6px; width:32px; height:32px; display:flex; align-items:center; justify-content:center; font-weight:700; margin-right:10px;">&#10003;</span>Direct Equity</div>
-					<p style="color:#e6e6e6; font-size:0.98rem;">Equity buy-in in high impact ventures</p>
-				</div>
-				<div class="format-card" style="background:#323232; border-radius:8px; padding:24px;">
-					<div style="display:flex; align-items:center; margin-bottom:10px;"><span class="count" style="background:#FDB913; color:#fff; border-radius:6px; width:32px; height:32px; display:flex; align-items:center; justify-content:center; font-weight:700; margin-right:10px;">&#10003;</span>Convertible Notes &amp; SAFE</div>
-					<p style="color:#e6e6e6; font-size:0.98rem;">Flexible investment structures</p>
-				</div>
-				<div class="format-card" style="background:#323232; border-radius:8px; padding:24px;">
-					<div style="display:flex; align-items:center; margin-bottom:10px;"><span class="count" style="background:#FDB913; color:#fff; border-radius:6px; width:32px; height:32px; display:flex; align-items:center; justify-content:center; font-weight:700; margin-right:10px;">&#10003;</span>Syndicated Growth Rounds</div>
-					<p style="color:#e6e6e6; font-size:0.98rem;">Scaling up with a network of investors</p>
-				</div>
-				<div class="format-card" style="background:#323232; border-radius:8px; padding:24px;">
-					<div style="display:flex; align-items:center; margin-bottom:10px;"><span class="count" style="background:#FDB913; color:#fff; border-radius:6px; width:32px; height:32px; display:flex; align-items:center; justify-content:center; font-weight:700; margin-right:10px;">&#10003;</span>Joint Ventures</div>
-					<p style="color:#e6e6e6; font-size:0.98rem;">Collaborative value creation</p>
-				</div>
-				<div class="format-card" style="background:#323232; border-radius:8px; padding:24px;">
-					<div style="display:flex; align-items:center; margin-bottom:10px;"><span class="count" style="background:#FDB913; color:#fff; border-radius:6px; width:32px; height:32px; display:flex; align-items:center; justify-content:center; font-weight:700; margin-right:10px;">&#10003;</span>Internal Spinouts</div>
-					<p style="color:#e6e6e6; font-size:0.98rem;">Incubating new business models</p>
-				</div>
+	<!-- HEADER (copied from index.html) -->
+	<header class="header">
+		<div class="header-container">
+			<div class="logo-wrap">
+				<img src="assets/Logo.png" alt="Altellect" />
 			</div>
+			<nav class="nav">
+				<a href="index.html">Home</a>
+				<a href="about-us.html">About Us</a>
+				<a href="Projects.html">Projects</a>
+				<a class="active" href="capital.html">Altellect Capital</a>
+				<a href="carrers.html">Careers</a>
+				<a href="Apply-now.html">Join our team</a>
+				<a href="contact.html">Contact Us</a>
+			</nav>
+			<a class="join-btn" href="join.html">Join The Ecosystem</a>
+		</div>
+	</header>
+
+	<!-- HERO SECTION -->
+	<section class="capital-hero"
+		style="position:relative; background:url('assets/Altellect-Cap-Banner.png') center/cover no-repeat; min-height:420px; height:420px; display:flex; align-items:flex-end;">
+		<div class="about-hero-overlay"
+			style="position:absolute;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.32);"></div>
+		<div class="about-hero-content"
+			style="position:relative;z-index:1;width:100%;height:100%;display:flex;flex-direction:column;justify-content:flex-end;align-items:center;">
+			<h1 class="about-hero-title"
+				style="color:#fff;font-size:1.7rem;font-family:'Montserrat',sans-serif;text-align:center;width:100%;text-shadow:0 2px 16px rgba(0,0,0,0.25);margin:0 0 40px 0;">
+				Investing in Enduring Masterpieces</h1>
 		</div>
 	</section>
 
-	<!-- We Invest In -->
-	<section style="background:#f7f7f7; padding:40px 0;">
-		<div class="container" style="max-width:900px; margin:auto; display:flex; justify-content:space-around; align-items:center; flex-wrap:wrap; gap:32px;">
-			<div style="flex:1; min-width:220px; text-align:center;">
-				<img src="assets/sector-icon1.png" alt="Refineries, Ancillaries" style="height:60px; margin-bottom:12px;">
-				<h4 style="font-size:1.1rem; font-weight:700; margin-bottom:6px;">Refineries, Ancillaries</h4>
-				<p style="font-size:0.98rem; color:#444;">Leading advances in oil & gas</p>
-			</div>
-			<div style="flex:1; min-width:220px; text-align:center;">
-				<img src="assets/sector-icon2.png" alt="Specialized Businesses, Niche" style="height:60px; margin-bottom:12px;">
-				<h4 style="font-size:1.1rem; font-weight:700; margin-bottom:6px;">Specialized Businesses, Niche</h4>
-				<p style="font-size:0.98rem; color:#444;">Targeted sector investments</p>
-			</div>
-			<div style="flex:1; min-width:220px; text-align:center;">
-				<img src="assets/sector-icon3.png" alt="Frontier Tech & Incubating Asset" style="height:60px; margin-bottom:12px;">
-				<h4 style="font-size:1.1rem; font-weight:700; margin-bottom:6px;">Frontier Tech & Incubating Asset</h4>
-				<p style="font-size:0.98rem; color:#444;">Pioneering the future</p>
-			</div>
-		</div>
-	</section>
-
-	<!-- Call to Action -->
-	<section style="text-align:center; padding:40px 0 60px 0;">
-		<h3 style="font-size:1.3rem; font-family:Montserrat,Arial,sans-serif; font-weight:700; margin-bottom:12px;">Your Vision Deserves A Dedicated Partner.</h3>
-		<a href="#" class="join-btn">LET'S CONNECT!</a>
-	</section>
-</main>
-
-<!-- FOOTER (copied from index.html) -->
-<footer class="footer">
-	<div class="container footer-grid">
-		<div class="footer-brand">
-			<img src="assets/logo.png" alt="Altellect Logo" class="footer-logo" />
-			<p>
-				801, 8th Floor, Sea Breeze Building,<br>
-				Century Bazaar, Prabhadevi, Mumbai,<br>
-				Maharashtra 400025
+	<!-- MAIN CONTENT -->
+	<main class="capital-main" style="background:#fff;">
+		<section style="text-align:center; padding:40px 0 0 0;">
+			<h2 style="font-family:Montserrat,Arial,sans-serif; font-size:2rem; font-weight:700; margin-bottom:10px;">
+				Where Capital Meets Execution Intelligence</h2>
+			<p style="font-size:1.1rem; color:#222; max-width:700px; margin:0 auto 18px auto;">Altellect Capital is our
+				strategic investment arm that fuels high-impact, high-return ventures designed for long-term perpetuity.
 			</p>
-		</div>
-		<div>
-			<h5>Menu</h5>
-			<a href="#">Projects</a>
-			<a href="#">Altellect Capital</a>
-			<a href="#">Careers</a>
-		</div>
-		<div>
-			<h5>Support</h5>
-			<a href="#">Contact Us</a>
-		</div>
-		<div>
-			<h5>Company</h5>
-			<a href="#">Home</a>
-			<a href="#">About Us</a>
-			<a href="#">Join The Ecosystem</a>
-			<div class="socials">
-				<a href="#">f</a>
-				<a href="#">in</a>
+			<a href="#" class="join-btn" style="margin-top:10px;">Join the Ecosystem</a>
+		</section>
+
+		<!-- Capital Formats -->
+		<section style="background:#393939; color:#fff; margin:40px 0; padding:36px 0;">
+			<div class="container" style="max-width:1000px; margin:auto;">
+			
+				<h3
+					style="font-size:1.4rem; font-family:Montserrat,Arial,sans-serif; font-weight:700; margin-bottom:8px;text-align:center;">
+					Our Capital Formats</h3>
+				<div style="font-size:1rem; color:#e6e6e6; margin-bottom:24px;text-align:center;">From seed to scale:
+					choose the model that fits your vision</div>
+				<div style="height:2px; background:#FDB913; width:90%; margin:24px auto 32px auto;"></div>
+				<div class="capital-formats-grid" style="display:grid; grid-template-columns:repeat(3,1fr); gap:24px;">
+					<div class="format-card" style="border-radius:8px; padding:24px;">
+						<div style="display:flex; align-items:center; margin-bottom:10px;">
+							<img src="assets/Group 97.png" alt="Format Icon" style="width:50px; height:50px; margin-right:10px; display:flex; align-items:center; justify-content:center; background:#FDB913; border-radius:0;" />
+							Direct Equity
+						</div>
+						<p style="color:#e6e6e6; font-size:0.98rem;">Ownership capital with aligned long term partnership</p>
+					</div>
+					<div class="format-card" style="border-radius:8px; padding:24px;">
+						<div style="display:flex; align-items:center; margin-bottom:10px;">
+							<img src="assets/Group 97.png" alt="Format Icon" style="width:32px; height:32px; margin-right:10px; display:flex; align-items:center; justify-content:center; border-radius:6px; background:#FDB913;" />
+							Convertible Notes &amp; SAFEs
+						</div>
+						<p style="color:#e6e6e6; font-size:0.98rem;">Flexible bridge with deferred valuation</p>
+					</div>
+					<div class="format-card" style="border-radius:8px; padding:24px;">
+						<div style="display:flex; align-items:center; margin-bottom:10px;">
+							<img src="assets/Group 97.png" alt="Format Icon" style="width:32px; height:32px; margin-right:10px; display:flex; align-items:center; justify-content:center; border-radius:6px; background:#FDB913;" />
+							Syndicated Growth Rounds
+						</div>
+						<p style="color:#e6e6e6; font-size:0.98rem;">Lead or join rounds to accelerate scale</p>
+					</div>
+					<div class="format-card" style="border-radius:8px; padding:24px;">
+						<div style="display:flex; align-items:center; margin-bottom:10px;">
+							<img src="assets/Group 97.png" alt="Format Icon" style="width:32px; height:32px; margin-right:10px; display:flex; align-items:center; justify-content:center; border-radius:6px; background:#FDB913;" />
+							Joint Ventures
+						</div>
+						<p style="color:#e6e6e6; font-size:0.98rem;">Co-create new businesses with shared upside</p>
+					</div>
+					<div class="format-card" style="border-radius:8px; padding:24px;">
+						<div style="display:flex; align-items:center; margin-bottom:10px;">
+							<img src="assets/Group 97.png" alt="Format Icon" style="width:32px; height:32px; margin-right:10px; display:flex; align-items:center; justify-content:center; border-radius:6px; background:#FDB913;" />
+							Internal Spinouts
+						</div>
+						<p style="color:#e6e6e6; font-size:0.98rem;">Incubate teams into independent ventures</p>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- We Invest In -->
+				<section style="background:#f7f7f7; padding:40px 0;">
+					<div class="container" style="max-width:1000px; margin:auto;">
+						<h2 style="text-align:center; font-family:Montserrat,Arial,sans-serif; font-size:2rem; font-weight:700; margin-bottom:32px;">We Invest In…</h2>
+						<div style="display:flex; justify-content:space-around; align-items:flex-start; flex-wrap:wrap; gap:32px;">
+							<div style="flex:1; min-width:220px; text-align:center; max-width:320px;">
+								<img src="assets/Real_est_asset_lifestyle.png" alt="Real Estate, Asset Advisory, Lifestyle, Wellness, and SaaS" style="height:60px; margin-bottom:16px;">
+								<div style="font-size:1rem; font-weight:500; color:#222; margin-bottom:0;">Real Estate, Asset Advisory,<br> Lifestyle, Wellness, and SaaS</div>
+							</div>
+							<div style="flex:1; min-width:220px; text-align:center; max-width:320px;">
+								<img src="assets/System-led_business.png" alt="System-led Businesses With Smart Monetization" style="height:60px; margin-bottom:16px;">
+								<div style="font-size:1rem; font-weight:500; color:#222; margin-bottom:0;">System-led Businesses With<br> Smart Monetization</div>
+							</div>
+							<div style="flex:1; min-width:220px; text-align:center; max-width:320px;">
+								<img src="assets/Co-building-longterm-alignement.png" alt="Founders Open To Co-building And Long-term Alignment" style="height:60px; margin-bottom:16px;">
+								<div style="font-size:1rem; font-weight:500; color:#222; margin-bottom:0;">Founders Open To Co-building And<br> Long-term Alignment</div>
+							</div>
+						</div>
+					</div>
+				</section>
+
+		<!-- Call to Action -->
+		<section style="text-align:center; padding:40px 0 60px 0;">
+			<h3 style="font-size:1.3rem; font-family:Montserrat,Arial,sans-serif; font-weight:700; margin-bottom:12px;">
+				Your Vision Deserves A Dedicated Partner.</h3>
+			<a href="#" class="join-btn">LET'S CONNECT!</a>
+		</section>
+	</main>
+
+	<!-- FOOTER (copied from index.html) -->
+	<footer class="footer">
+		<div class="container footer-grid">
+			<div class="footer-brand">
+				<img src="assets/logo.png" alt="Altellect Logo" class="footer-logo" />
+				<p>
+					801, 8th Floor, Sea Breeze Building,<br>
+					Century Bazaar, Prabhadevi, Mumbai,<br>
+					Maharashtra 400025
+				</p>
+			</div>
+			<div>
+				<h5>Menu</h5>
+				<a href="#">Projects</a>
+				<a href="#">Altellect Capital</a>
+				<a href="#">Careers</a>
+			</div>
+			<div>
+				<h5>Support</h5>
+				<a href="#">Contact Us</a>
+			</div>
+			<div>
+				<h5>Company</h5>
+				<a href="#">Home</a>
+				<a href="#">About Us</a>
+				<a href="#">Join The Ecosystem</a>
+				<div class="socials">
+					<a href="#">f</a>
+					<a href="#">in</a>
+				</div>
 			</div>
 		</div>
-	</div>
-	<div class="footer-bottom container">
-		<span>Copyright © 2026 Altellect | All rights reserved.</span>
-		<a href="#">Privacy Policy</a>
-	</div>
-</footer>
+		<div class="footer-bottom container">
+			<span>Copyright © 2026 Altellect | All rights reserved.</span>
+			<a href="#">Privacy Policy</a>
+		</div>
+	</footer>
 
 </body>
+
 </html>
