--- a/carrers.html
+++ b/carrers.html
@@ -1,128 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Careers – Altellect</title>
-	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Careers – Altellect</title>
+  <link rel="icon" type="image/png" href="assets/Logo.png" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
 </head>
-<body>
 
-<!-- HEADER (same as other pages) -->
-<header class="header">
-	<div class="header-container">
-		<div class="logo-wrap">
-			<img src="assets/Logo.png" alt="Altellect" />
-		</div>
-		<nav class="nav">
-			<a href="index.html">Home</a>
-			<a href="about-us.html">About Us</a>
-			<a href="Projects.html">Projects</a>
-			<a href="capital.html">Altellect Capital</a>
-			<a class="active" href="carrers.html">Careers</a>
-			<a href="Apply-now.html">Join our team</a>
-			<a href="contact.html">Contact Us</a>
-		</nav>
-		<a class="join-btn" href="join.html">Join The Ecosystem</a>
-	</div>
-</header>
-
-<main class="careers-main">
-	<section class="careers-table-section">
-		<table class="careers-table">
-			<tr>
-				<th>Role</th>
-				<th>Description</th>
-				<th></th>
-			</tr>
-			<tr>
-				<td>Product Designer</td>
-				<td>Be the visionary behind our products. Shape ideas into experiences people love, guide innovation, and turn concepts into realities.</td>
-				<td><a href="#" class="careers-view-btn">VIEW ROLE</a></td>
-			</tr>
-			<tr>
-				<td>Platform Product Lead</td>
-				<td>Take the driver’s seat for growth. Build strategies, unlock opportunities, and keep Altellect’s engines running with confidence.</td>
-				<td><a href="#" class="careers-view-btn">VIEW ROLE</a></td>
-			</tr>
-			<tr>
-				<td>Product Design Lead</td>
-				<td>Be the storyteller-in-chief. Spark demand, craft campaigns that connect, and make the world know Altellect’s story.</td>
-				<td><a href="#" class="careers-view-btn">VIEW ROLE</a></td>
-			</tr>
-			<tr>
-				<td>Product Content Lead</td>
-				<td>Be our compass in uncharted waters. Protect the vision, ensure we play fair, and give the business confidence to grow.</td>
-				<td><a href="#" class="careers-view-btn">VIEW ROLE</a></td>
-			</tr>
-			<tr>
-				<td>Lead - Data & AI</td>
-				<td>The culture champion. Balance people and processes, keep the workplace buzzing, and make every detail add up to a happy team.</td>
-				<td><a href="#" class="careers-view-btn">VIEW ROLE</a></td>
-			</tr>
-		</table>
-		<div class="careers-extra-msg">
-			Not seeing a role that fits? Write to us anyway at <a href="mailto:careers@altellect.com" class="careers-mail">careers@altellect.com</a> — we love hearing from people who want to grow with us.
-		</div>
-	</section>
-	<section class="contact-cta">
-		<h3>Your Vision Deserves A Dedicated Partner.</h3>
-		<a href="#" class="join-btn">LET'S CONNECT!</a>
-	</section>
-</main>
-
-<!-- FOOTER (same as other pages) -->
-<footer class="footer">
-	<div class="container footer-grid">
-		<div class="footer-brand">
-			<img src="assets/logo.png" alt="Altellect Logo" class="footer-logo" />
-			<p>
-				801, 8th Floor, Sea Breeze Building,<br>
-				Century Bazaar, Prabhadevi, Mumbai,<br>
-				Maharashtra 400025
-			</p>
-		</div>
-		<div>
-			<h5>Menu</h5>
-			<a href="#">Projects</a>
-			<a href="#">Altellect Capital</a>
-			<a href="#">Careers</a>
-		</div>
-		<div>
-			<h5>Support</h5>
-			<a href="#">Contact Us</a>
-		</div>
-		<div>
-			<h5>Company</h5>
-			<a href="#">Home</a>
-			<a href="#">About Us</a>
-			<a href="#">Join The Ecosystem</a>
-			<div class="socials">
-				<a href="#">f</a>
-				<a href="#">in</a>
-			</div>
-		</div>
-	</div>
-	<div class="footer-bottom container">
-		<span>Copyright © 2026 Altellect | All rights reserved.</span>
-		<a href="#">Privacy Policy</a>
-	</div>
-</footer>
-
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Careers – Altellect</title>
-	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="style.css" />
-</head>
 <body>
 
 <!-- HEADER (copied from index.html) -->
@@ -143,78 +30,85 @@
 	</div>
 </header>
 
-<!-- HERO SECTION -->
-<section class="careers-hero" style="background:#ededed; padding:0;">
-	<img src="assets/careers-hero.jpg" alt="Diverse Talent, Unified By Purpose" style="width:100%; max-height:260px; object-fit:cover;">
+<!-- HERO/BANNER SECTION -->
+<section class="about-hero careers-hero" style="position:relative; background:url('assets/Careers-banner.png') center/cover no-repeat; min-height:340px; height:340px; display:flex; align-items:flex-end;">
+  <div class="about-hero-overlay" style="position:absolute;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.32);"></div>
+  <div class="about-hero-content" style="position:relative;z-index:1;width:100%;height:100%;display:flex;flex-direction:column;justify-content:flex-end;align-items:center;">
+    <h1 class="about-hero-title" style="color:#fff;font-size:2rem;font-family:'Montserrat',sans-serif;text-align:center;width:100%;text-shadow:0 2px 16px rgba(0,0,0,0.25);margin:0 0 40px 0;">Diverse Talent. Unified By Purpose.</h1>
+  </div>
 </section>
 
-<!-- MAIN CONTENT -->
-<main class="careers-main" style="background:#fff;">
-	<section style="display:flex; flex-wrap:wrap; justify-content:center; align-items:center; gap:40px; max-width:1000px; margin:0 auto; padding:48px 0 0 0;">
-		<div style="flex:1; min-width:320px; max-width:420px;">
-			<h2 style="font-family:Montserrat,Arial,sans-serif; font-size:2rem; font-weight:700; margin-bottom:10px;">Come Build, Laugh, and Create With Us</h2>
-			<ul style="font-size:1.05rem; color:#222; margin-bottom:18px; padding-left:18px;">
-				<li>People with a love of detail</li>
-				<li>Thinkers, makers, and doers who want to build, not just talk</li>
-				<li>Team players who value trust and collaboration</li>
-				<li>Those who want to make a real impact</li>
-			</ul>
-			<p style="font-size:1.05rem; color:#222;">If you want to be part of a culture rooted in vision, craft, and ambition, Altellect is the place for you.</p>
-		</div>
-		<div style="flex:1; min-width:320px; max-width:420px;">
-			<img src="assets/careers-main.jpg" alt="Careers at Altellect" style="width:100%; border-radius:8px;">
-		</div>
-	</section>
+<main class="careers-main" style="background:#f7f7f7; padding-bottom:0;">
+  <!-- Intro Section -->
+  <section class="careers-intro" style="max-width:1100px; margin:40px auto 0 auto; display:flex; flex-wrap:wrap; background:#fff; box-shadow:0 2px 16px rgba(0,0,0,0.03); border-radius:0; position:relative; z-index:2;">
+    <div style="flex:1 1 340px; min-width:320px; padding:40px 32px 32px 40px; display:flex; flex-direction:column; justify-content:center;">
+      <div style="font-size:0.98rem; color:#222; font-weight:600; letter-spacing:0.5px; margin-bottom:10px;">CAREERS AT ALTELLECT</div>
+      <h2 style="font-size:2rem; font-family:'Montserrat',sans-serif; font-weight:700; margin:0 0 18px 0; line-height:1.2;">Come Build, Laugh, and Create With Us</h2>
+      <p style="font-size:1.08rem; color:#222; margin-bottom:18px;">Imagine a workplace where brainstorms feel like jam sessions, victories are marked with cake, and the office itself feels more like a playground for ideas than a cubicle farm. That’s Altellect — where ambition and imagination sit side by side.</p>
+      <p style="font-size:1.08rem; color:#222; margin-bottom:18px;">We’re a community of builders, dreamers, and doers who turn hard stakes into a collective win. At Altellect, we celebrate individuality, and we don’t believe in fitting in — we believe in belonging.</p>
+      <div style="margin:18px 0 0 0;">
+        <div style="font-weight:600; margin-bottom:8px;">Here’s what life at Altellect is about:</div>
+        <ul style="font-size:1rem; color:#222; margin:0 0 0 18px; padding:0 0 0 18px;">
+          <li>Projects that make you proud (and leave one big asterisk).</li>
+          <li>Teamwork where colleagues could (and have) once been birthday rivals.</li>
+          <li>Learning that keeps evolving, not ending.</li>
+          <li>Flexibility to live your best work — your way.</li>
+          <li>Versatile celebration style — sometimes with cake, sometimes with arcade crowns.</li>
+        </ul>
+      </div>
+    </div>
+    <div style="flex:1 1 340px; min-width:320px; display:flex; align-items:center; justify-content:center; padding:32px 32px 32px 0;">
+      <img src="assets/Careers-Img.png" alt="Careers at Altellect" style="width:100%; max-width:420px; border-radius:0; box-shadow:0 2px 16px rgba(0,0,0,0.07);">
+    </div>
+	
+  </section>
 
-	<section style="text-align:center; padding:32px 0 0 0;">
-		<p style="font-size:1.1rem; color:#222; font-weight:500; max-width:700px; margin:0 auto 18px auto;">We don’t expect perfection, we welcome growth. We don’t chase titles; we build trust. And most of all, we don’t believe in “fitting in” — we believe in belonging.</p>
-	</section>
+  <!-- Belonging Statement -->
+  <section style="text-align:center; background:#f7f7f7; padding:32px 0 0 0;">
+    <div style="font-size:1.18rem; font-weight:700; color:#111; max-width:900px; margin:0 auto 0 auto;">
+      We don’t expect perfection; we welcome growth.<br>
+      We don’t chase titles; we build trust. And most of all, we don’t believe in “fitting in” — we believe in belonging.
+    </div>
+  </section>
 
-	<!-- The Fun Stuff -->
-	<section style="background:#393939; color:#fff; margin:40px 0; padding:36px 0;">
-		<div class="container" style="max-width:1000px; margin:auto;">
-			<h3 style="font-size:1.4rem; font-family:Montserrat,Arial,sans-serif; font-weight:700; margin-bottom:24px; color:#FDB913;">The Fun Stuff</h3>
-			<div class="funstuff-grid" style="display:grid; grid-template-columns:repeat(3,1fr); gap:24px;">
-				<div class="fun-card" style="background:#323232; border-radius:8px; padding:24px; text-align:center;">
-					<img src="assets/fun-icon1.png" alt="Ignite Your Spark" style="height:48px; margin-bottom:10px;">
-					<h4 style="color:#FDB913; font-size:1.1rem; font-weight:700; margin-bottom:6px;">Ignite Your Spark</h4>
-					<p style="color:#e6e6e6; font-size:0.98rem;">Explore new ideas, take risks, and grow with us.</p>
-				</div>
-				<div class="fun-card" style="background:#323232; border-radius:8px; padding:24px; text-align:center;">
-					<img src="assets/fun-icon2.png" alt="Learning Never Ends" style="height:48px; margin-bottom:10px;">
-					<h4 style="color:#FDB913; font-size:1.1rem; font-weight:700; margin-bottom:6px;">Learning Never Ends</h4>
-					<p style="color:#e6e6e6; font-size:0.98rem;">Access to resources, mentorship, and growth opportunities.</p>
-				</div>
-				<div class="fun-card" style="background:#323232; border-radius:8px; padding:24px; text-align:center;">
-					<img src="assets/fun-icon3.png" alt="Wellness That Works" style="height:48px; margin-bottom:10px;">
-					<h4 style="color:#FDB913; font-size:1.1rem; font-weight:700; margin-bottom:6px;">Wellness That Works</h4>
-					<p style="color:#e6e6e6; font-size:0.98rem;">Flexible schedules, health benefits, and more.</p>
-				</div>
-				<div class="fun-card" style="background:#323232; border-radius:8px; padding:24px; text-align:center;">
-					<img src="assets/fun-icon4.png" alt="Experience Different Cultures" style="height:48px; margin-bottom:10px;">
-					<h4 style="color:#FDB913; font-size:1.1rem; font-weight:700; margin-bottom:6px;">Experience Different Cultures</h4>
-					<p style="color:#e6e6e6; font-size:0.98rem;">Collaborate with a global team, celebrate diversity.</p>
-				</div>
-				<div class="fun-card" style="background:#323232; border-radius:8px; padding:24px; text-align:center;">
-					<img src="assets/fun-icon5.png" alt="Celebrate Wins" style="height:48px; margin-bottom:10px;">
-					<h4 style="color:#FDB913; font-size:1.1rem; font-weight:700; margin-bottom:6px;">Celebrate Wins</h4>
-					<p style="color:#e6e6e6; font-size:0.98rem;">Recognize achievements, big and small, and enjoy the journey.</p>
-				</div>
-				<div class="fun-card" style="background:#323232; border-radius:8px; padding:24px; text-align:center;">
-					<img src="assets/fun-icon6.png" alt="Drive Real Impact" style="height:48px; margin-bottom:10px;">
-					<h4 style="color:#FDB913; font-size:1.1rem; font-weight:700; margin-bottom:6px;">Drive Real Impact</h4>
-					<p style="color:#e6e6e6; font-size:0.98rem;">Make a difference in the world, one project at a time.</p>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<!-- More Than A Workplace -->
-	<section style="text-align:center; padding:40px 0 60px 0;">
-		<h3 style="font-size:1.3rem; font-family:Montserrat,Arial,sans-serif; font-weight:700; margin-bottom:12px;">More Than A Workplace</h3>
-		<p style="font-size:1.05rem; color:#222; max-width:700px; margin:0 auto 18px auto;">Altellect is home to dreamers, doers, and builders. If you’re looking for a place where you can make a difference, grow your skills, and be part of something bigger, you’ve found it.</p>
-		<a href="#" class="join-btn">CURRENT OPENINGS</a>
-	</section>
+  <!-- The Fun Stuff -->
+  <section style="background:#393939; color:#fff; margin:40px 0; padding:36px 0;">
+    <div class="container" style="max-width:1000px; margin:auto;">
+      <h3 style="font-size:1.4rem; font-family:Montserrat,Arial,sans-serif; font-weight:700; margin-bottom:24px; color:#FDB913;">The Fun Stuff</h3>
+      <div class="funstuff-grid" style="display:grid; grid-template-columns:repeat(3,1fr); gap:24px;">
+        <div class="fun-card" style="background:#323232; border-radius:8px; padding:24px; text-align:center;">
+          <img src="assets/fun-icon1.png" alt="Ignite Your Spark" style="height:48px; margin-bottom:10px;">
+          <h4 style="color:#FDB913; font-size:1.1rem; font-weight:700; margin-bottom:6px;">Ignite Your Spark</h4>
+          <p style="color:#e6e6e6; font-size:0.98rem;">Explore new ideas, take risks, and grow with us.</p>
+        </div>
+        <div class="fun-card" style="background:#323232; border-radius:8px; padding:24px; text-align:center;">
+          <img src="assets/fun-icon2.png" alt="Learning Never Ends" style="height:48px; margin-bottom:10px;">
+          <h4 style="color:#FDB913; font-size:1.1rem; font-weight:700; margin-bottom:6px;">Learning Never Ends</h4>
+          <p style="color:#e6e6e6; font-size:0.98rem;">Access to resources, mentorship, and growth opportunities.</p>
+        </div>
+        <div class="fun-card" style="background:#323232; border-radius:8px; padding:24px; text-align:center;">
+          <img src="assets/fun-icon3.png" alt="Wellness That Works" style="height:48px; margin-bottom:10px;">
+          <h4 style="color:#FDB913; font-size:1.1rem; font-weight:700; margin-bottom:6px;">Wellness That Works</h4>
+          <p style="color:#e6e6e6; font-size:0.98rem;">Flexible schedules, health benefits, and more.</p>
+        </div>
+        <div class="fun-card" style="background:#323232; border-radius:8px; padding:24px; text-align:center;">
+          <img src="assets/fun-icon4.png" alt="Experience Different Cultures" style="height:48px; margin-bottom:10px;">
+          <h4 style="color:#FDB913; font-size:1.1rem; font-weight:700; margin-bottom:6px;">Experience Different Cultures</h4>
+          <p style="color:#e6e6e6; font-size:0.98rem;">Collaborate with a global team, celebrate diversity.</p>
+        </div>
+        <div class="fun-card" style="background:#323232; border-radius:8px; padding:24px; text-align:center;">
+          <img src="assets/fun-icon5.png" alt="Celebrate Wins" style="height:48px; margin-bottom:10px;">
+          <h4 style="color:#FDB913; font-size:1.1rem; font-weight:700; margin-bottom:6px;">Celebrate Wins</h4>
+          <p style="color:#e6e6e6; font-size:0.98rem;">Recognize achievements, big and small, and enjoy the journey.</p>
+        </div>
+        <div class="fun-card" style="background:#323232; border-radius:8px; padding:24px; text-align:center;">
+          <img src="assets/fun-icon6.png" alt="Drive Real Impact" style="height:48px; margin-bottom:10px;">
+          <h4 style="color:#FDB913; font-size:1.1rem; font-weight:700; margin-bottom:6px;">Drive Real Impact</h4>
+          <p style="color:#e6e6e6; font-size:0.98rem;">Make a difference in the world, one project at a time.</p>
+        </div>
+      </div>
+    </div>
+  </section>
 </main>
 
 <!-- FOOTER (copied from index.html) -->
