--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     </nav>
 
      <a class="join-btn" href="join.html">Join The Ecosystem</a>
-  </div>
+        <title>Altellect</title>
+        <link rel="icon" type="image/png" href="assets/Logo.png" />
 </header>
 
 <!-- HERO BANNER -->
