--- a/Projects.html
+++ b/Projects.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Projects – Altellect</title>
+  <link rel="icon" type="image/png" href="assets/Logo.png" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
@@ -27,29 +28,101 @@
         <a class="join-btn" href="join.html">Join The Ecosystem</a>
     </div>
   </header>
-  <section class="projects-hero">
-    <div class="projects-hero-content">
-      <h1 class="projects-title">Across Sectors, Built With Intent.</h1>
+  <section class="projects-hero" style="position:relative; background:url('assets/Group 7860.png') center/cover no-repeat; min-height:420px; height:420px; display:flex; align-items:flex-end;">
+    <div class="about-hero-overlay" style="position:absolute;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.32);"></div>
+    <div class="about-hero-content" style="position:relative;z-index:1;width:100%;height:100%;display:flex;flex-direction:column;justify-content:flex-end;align-items:center;">
+      <h1 class="about-hero-title" style="color:#fff;font-size:1.7rem;font-family:'Montserrat',sans-serif;text-align:center;width:100%;text-shadow:0 2px 16px rgba(0,0,0,0.25);margin:0 0 40px 0;">Across Sectors, Built With Intent.</h1>
     </div>
   </section>
+
+</section>
   <section class="ventures-section">
     <div class="ventures-headline">10+ Ventures. One Unified Growth Engine</div>
     <div class="ventures-desc">Altellect is actively building a suite of high-growth, high-trust businesses across strategic sectors.</div>
     <div class="ventures-grid">
-      <div class="venture-card"><img class="venture-icon" src="assets/icon1.png" alt=""><div class="venture-title">Real Assets &amp; Connected Living</div><div class="venture-desc">Smart, sustainable, and connected living solutions for the future.</div></div>
-      <div class="venture-card"><img class="venture-icon" src="assets/icon2.png" alt=""><div class="venture-title">Capital Access</div><div class="venture-desc">Innovative capital solutions for entrepreneurs and businesses.</div></div>
-      <div class="venture-card"><img class="venture-icon" src="assets/icon3.png" alt=""><div class="venture-title">Health, Wellness, &amp; Longevity</div><div class="venture-desc">Empowering healthier, longer lives through science and technology.</div></div>
-      <div class="venture-card"><img class="venture-icon" src="assets/icon4.png" alt=""><div class="venture-title">Growth Commerce</div><div class="venture-desc">Driving growth for brands and retailers in the digital age.</div></div>
-      <div class="venture-card"><img class="venture-icon" src="assets/icon5.png" alt=""><div class="venture-title">Experiential Travel &amp; Hospitality</div><div class="venture-desc">Curated travel and hospitality experiences for the modern explorer.</div></div>
-      <div class="venture-card"><img class="venture-icon" src="assets/icon6.png" alt=""><div class="venture-title">Private Education</div><div class="venture-desc">Transforming education with personalized, high-impact learning.</div></div>
-      <div class="venture-card"><img class="venture-icon" src="assets/icon7.png" alt=""><div class="venture-title">AI Systems &amp; Intelligent Automation</div><div class="venture-desc">AI-driven solutions for efficiency, insight, and growth.</div></div>
-      <div class="venture-card"><img class="venture-icon" src="assets/icon8.png" alt=""><div class="venture-title">Strategic Transformation</div><div class="venture-desc">Guiding organizations through change and innovation.</div></div>
+      <div class="venture-card horizontal-card">
+        <div class="venture-img-wrap"><img class="venture-icon" src="./assets/Reas-state-dve.png" alt=""></div>
+        <div class="venture-content-wrap">
+          <div class="venture-title">Real Assets &amp; Connected Living</div>
+          <div class="venture-desc">Institutional-grade real estate, lifestyle-led developments, and experience-driven asset platforms.</div>
+        </div>
+      </div>
+      <div class="venture-card horizontal-card">
+        <div class="venture-img-wrap"><img class="venture-icon" src="assets/Asset-Fin-Advisor.png" alt=""></div>
+        <div class="venture-content-wrap">
+          <div class="venture-title">Capital, Assets & Wealth Platforms</div>
+          <div class="venture-desc">Modern advisory, investment, and asset-management ventures designed for evolving capital behaviour.</div>
+        </div>
+      </div>
+        <div class="venture-card horizontal-card">
+        <div class="venture-img-wrap"><img class="venture-icon" src="assets/AI TOOLS.png" alt=""></div>
+        <div class="venture-content-wrap">
+          <div class="venture-title">AI Systems & Intelligent Automation</div>
+          <div class="venture-desc">Applied AI, decision-support tools, and automation platforms embedded into real business workflows.</div>
+        </div>
+      </div>
+      <div class="venture-card horizontal-card">
+        <div class="venture-img-wrap"><img class="venture-icon" src="assets/Wellness & Human Upgrade.png" alt=""></div>
+        <div class="venture-content-wrap">
+          <div class="venture-title">Health, Wellness & Human Performance</div>
+          <div class="venture-desc">Preventive health, diagnostics, fitness, and human optimisation ecosystems.</div>
+        </div>
+      </div>
+      <div class="venture-card horizontal-card">
+        <div class="venture-img-wrap"><img class="venture-icon" src="assets/Mktg-tech-creative-comm.png" alt=""></div>
+        <div class="venture-content-wrap">
+          <div class="venture-title">Brand, Commerce & Growth Infrastructure</div>
+          <div class="venture-desc">Technology-enabled brand building, marketing systems, and scalable commerce engines.</div>
+        </div>
+      </div>
+      <div class="venture-card horizontal-card">
+        <div class="venture-img-wrap"><img class="venture-icon" src="assets/Learning-Ai-skill.png" alt=""></div>
+        <div class="venture-content-wrap">
+          <div class="venture-title">Learning, Talent & Skill Acceleration</div>
+          <div class="venture-desc">Next-generation education, professional upskilling, and operator-led learning platforms.</div>
+        </div>
+      </div>
+      <div class="venture-card horizontal-card">
+        <div class="venture-img-wrap"><img class="venture-icon" src="assets/Travel-Leisure.png" alt=""></div>
+        <div class="venture-content-wrap">
+          <div class="venture-title">Experiential Travel & Lifestyle Ventures</div>
+          <div class="venture-desc">Curated travel, hospitality, and leisure formats built around culture, place, and experience.</div>
+        </div>
+      </div>
+      <div class="venture-card horizontal-card">
+        <div class="venture-img-wrap"><img class="venture-icon" src="assets/Venture-Incubatio-Mgmt.svg" alt=""></div>
+        <div class="venture-content-wrap">
+          <div class="venture-title">Venture Creation & Platform Building</div>
+          <div class="venture-desc">End-to-end venture building, incubation, and long-term management models.</div>
+        </div>
+      </div>
+      <div class="venture-card horizontal-card">
+        <div class="venture-img-wrap"><img class="venture-icon" src="assets/Franchising.png" alt=""></div>
+        <div class="venture-content-wrap">
+          <div class="venture-title">Franchise, Roll-Up & Multi-Brand Platforms</div>
+          <div class="venture-desc">Replicable business formats and multi-brand aggregation plays with strong unit economics.</div>
+        </div>
+      </div>
+          <div class="venture-card horizontal-card">
+        <div class="venture-img-wrap"><img class="venture-icon" src="assets/strategic-AdvisoryTransform.png" alt=""></div>
+        <div class="venture-content-wrap">
+          <div class="venture-title">Strategic Transformation & Enterprise Design
+
+          </div>
+          <div class="venture-desc">Operating-model redesign, new-venture creation, and growth transformation for established businesses.</div>
+        </div>
+      </div>
     </div>
+ 
   </section>
-  <section class="projects-cta">
-    <div class="projects-cta-text">Your Vision Deserves A Dedicated Partner.</div>
-    <button class="cta-btn">LET’S CONNECT!</button>
-  </section>
+<!-- CTA -->
+<section class="cta-wrap">
+  <div class="cta-inner" style="flex-direction: column; align-items: center; background: #fff; box-shadow: none; padding: 48px 0 40px 0; max-width: 100vw;">
+    <h2 class="cta-title" style="font-family: 'Roboto', 'Montserrat', Arial, sans-serif; font-size: 32px; font-weight: 700; color: #111; margin-bottom: 32px; text-align: center;">Your Vision Deserves A Dedicated Partner.</h2>
+    <button class="cta-btn" style="background: #666; color: #fff; font-family: 'Roboto', 'Montserrat', Arial, sans-serif; font-size: 20px; font-weight: 700; padding: 12px 48px; border: none; border-radius: 0; box-shadow: none; letter-spacing: 1px;">LET’S CONNECT!</button>
+  </div>
+</section>
+
   <footer class="footer">
     <div class="container footer-grid">
       <div class="footer-brand">
