--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Contact Us – Altellect</title>
+	<link rel="icon" type="image/png" href="assets/Logo.png" />
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css" />
@@ -29,18 +30,21 @@
 	</div>
 </header>
 
-<!-- HERO SECTION -->
-	<section class="contact-hero contact-hero-new">
-		<img src="assets/contact-hero.jpg" alt="One Platform. Many Conversations." class="contact-hero-img">
-		<div class="contact-hero-title">One Platform. Many Conversations.</div>
-	</section>
+
+<!-- HERO/BANNER SECTION -->
+<section class="about-hero contact-hero" style="position:relative; background:url('assets/Contact-us-banner.png') center/cover no-repeat; min-height:340px; height:340px; display:flex; align-items:flex-end;">
+  <div class="about-hero-overlay" style="position:absolute;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.32);"></div>
+  <div class="about-hero-content" style="position:relative;z-index:1;width:100%;height:100%;display:flex;flex-direction:column;justify-content:flex-end;align-items:center;">
+    <h1 class="about-hero-title" style="color:#fff;font-size:2rem;font-family:'Montserrat',sans-serif;text-align:center;width:100%;text-shadow:0 2px 16px rgba(0,0,0,0.25);margin:0 0 40px 0;">One Platform. Many Conversations.</h1>
+  </div>
+</section>
 
 
 <!-- MAIN CONTENT -->
 
-<main class="contact-main contact-main-new">
-	<section class="contact-content-row contact-content-row-v2">
-		<div class="contact-info-new contact-info-new-v2">
+<main class="contact-main contact-main-new" style="background:#f7f7f7; padding-bottom:0;">
+	<section class="contact-content-row contact-content-row-v2" style="max-width:1000px; margin:40px auto 0 auto; display:flex; flex-wrap:wrap; background:#fff; box-shadow:0 2px 16px rgba(0,0,0,0.03); border-radius:0;">
+		<div class="contact-info-new contact-info-new-v2" style="flex:1 1 340px; min-width:320px; padding:40px 32px 32px 40px;">
 			<div class="contact-info-label">GET IN TOUCH</div>
 			<div class="contact-info-title contact-info-title-v2">Seamless Communication,<br>Global Impact.</div>
 			<div class="contact-info-block contact-info-block-v2">
@@ -58,9 +62,9 @@
 				</div>
 			</div>
 		</div>
-		<div class="contact-form-box-new contact-form-box-new-v2">
+		<div class="contact-form-box-new contact-form-box-new-v2" style="flex:1 1 340px; min-width:320px; display:flex; flex-direction:column; align-items:center; justify-content:center; padding:32px 32px 32px 0;">
 			<div class="contact-form-title contact-form-title-v2">Send us a message</div>
-			<form class="contact-form-new contact-form-new-v2">
+			<form class="contact-form-new contact-form-new-v2" style="width:100%; max-width:340px;">
 				<input type="text" placeholder="Name" required>
 				<input type="email" placeholder="Email" required>
 				<input type="text" placeholder="Subject" required>
@@ -69,13 +73,13 @@
 			</form>
 		</div>
 	</section>
-	<section class="contact-social-row contact-social-row-v2">
-		<div class="contact-social-label-new contact-social-label-new-v2">Connect with us</div>
-		<div class="contact-social-icons-new contact-social-icons-new-v2">
-			<a href="#" class="contact-social-icon-new contact-social-icon-new-v2"><img src="assets/social-fb.png" alt="Facebook"></a>
-			<a href="#" class="contact-social-icon-new contact-social-icon-new-v2"><img src="assets/social-insta.png" alt="Instagram"></a>
-			<a href="#" class="contact-social-icon-new contact-social-icon-new-v2"><img src="assets/social-linkedin.png" alt="LinkedIn"></a>
-			<a href="#" class="contact-social-icon-new contact-social-icon-new-v2"><img src="assets/social-whatsapp.png" alt="WhatsApp"></a>
+	<section class="contact-social-row contact-social-row-v2" style="background:#fff; text-align:center; padding:24px 0 0 0;">
+		<div class="contact-social-label-new contact-social-label-new-v2" style="font-weight:600; margin-bottom:8px;">Connect with us</div>
+		<div class="contact-social-icons-new contact-social-icons-new-v2" style="display:inline-flex; gap:16px;">
+			<a href="#" class="contact-social-icon-new contact-social-icon-new-v2"><img src="assets/Facebook-unit.png" alt="Facebook"></a>
+			<a href="#" class="contact-social-icon-new contact-social-icon-new-v2"><img src="assets/Insta-unit@2x.png" alt="Instagram"></a>
+			<a href="#" class="contact-social-icon-new contact-social-icon-new-v2"><img src="assets/LinkedIn-unit.png" alt="LinkedIn"></a>
+			<a href="#" class="contact-social-icon-new contact-social-icon-new-v2"><img src="assets/WhatsApp-unit.png" alt="WhatsApp"></a>
 		</div>
 	</section>
 	<section class="contact-cta">
